feat: Rename project to xlaz

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "xla"
+name = "xlaz"
 version = "0.2.0"
 homepage = "https://github.com/shawwn/xla"
 description = "XLA utilities in pure Python"
