--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "xlaz"
 version = "0.4.0"
-homepage = "https://github.com/shawwn/xla"
+homepage = "https://github.com/shawwn/xlaz"
 description = "XLA utilities in pure Python"
 authors = ["Shawn Presser <shawnpresser@gmail.com>"]
 license = "MIT"
