--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+tensorflow-checkpoint-reader = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
