--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,7 +46,7 @@ jobs:
     # Only run this job if the "ci" job passes
     needs: ci
     # Only run this job if new work is pushed to "main"
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.repository_owner == 'shawwn' && github.event_name == 'push' && github.ref == 'refs/heads/main'
     # Step 1. Set up operating system
     runs-on: ubuntu-latest
     steps:
